Fix for zoomed pages on Mobile

--- a/styles/stylesResponsive.css
+++ b/styles/stylesResponsive.css
@@ -59,7 +59,7 @@
   .ContactMeLeftFirstBackground{
     width: 4095px;
     height: 2850px;
-    background: ;
+    /* background: ; */
     }
 
   .ContactMeForm{
